src/test/ui/repr/repr-transparent-other-reprs.stderr
error[E0692]: transparent struct cannot have other repr hints
  --> $DIR/repr-transparent-other-reprs.rs:5:8
   |
LL | #[repr(transparent, C)]
   |        ^^^^^^^^^^^  ^

error[E0692]: transparent struct cannot have other repr hints
  --> $DIR/repr-transparent-other-reprs.rs:10:8
   |
LL | #[repr(transparent, packed)]
   |        ^^^^^^^^^^^  ^^^^^^

error[E0692]: transparent struct cannot have other repr hints
  --> $DIR/repr-transparent-other-reprs.rs:13:8
   |
LL | #[repr(transparent, align(2))]
   |        ^^^^^^^^^^^  ^^^^^^^^

error[E0692]: transparent struct cannot have other repr hints
  --> $DIR/repr-transparent-other-reprs.rs:16:8
   |
LL | #[repr(transparent)]
   |        ^^^^^^^^^^^
LL | #[repr(C)]
   |        ^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0692`.
